# mcp_server_client

./: .gitignore
tcs_mcp_client/: README.md  app.py  app0.py
temp_convert_server/: README.md  main.py  pyproject.toml  server.py
temp_convert_server/data/: temperatures.json
temp_convert_server/tools/: cities_temp_converter_tool.py
temp_convert_server/utils/: temperature_converter.py
